<resources>
    <string name="app_name">Eon FT</string>
    <string name="PHN"> 0172-5044700/703</string>
    <string name="support">support@eoninfotech.com</string>
    <string name="qty">Quantity:</string>
    <string name="srno">Serial No:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="plnt">"Select Plant:</string>
    <string name="vehcl">"Select Device:</string>
    <string name="search_hint">"Search</string>
    <string name="drs">"Select DRS:</string>
    <string name="internal_storage">internal_storage</string>
    <string name="filled_by">  <b>Filled By :</b> </string>
    <string name="order_no"> <b>Order No : </b> </string>
    <string name="install_type"> <b>Install Type : </b> </string>
    <string name="duration"> <b>Duration : </b> </string>
    <string name="cust_type"> <b>Cust Type : </b> </string>
    <string name="client_name"> <b>Client Name : </b> </string>
    <string name="client_street_name"> <b>Client Street Name : </b> </string>
    <string name="client_city"> <b>Client City : </b> </string>
    <string name="client_office_number"> <b>Office Number : </b> </string>
    <string name="client_district"> <b>Client District : </b> </string>
    <string name="client_state"> <b>Client State : </b> </string>
    <string name="client_pincode"> <b>Client Pincode : </b> </string>
    <string name="contact_name"> <b>Contact Name : </b> </string>
    <string name="contact_number"> <b>Contact Number : </b> </string>
    <string name="contact_id"> <b>Contact Id : </b> </string>
    <string name="INSTALLATION_ADDRESS"> <b>Installation Address :</b> </string>
    <string name="street_name"> <b>Street Name : </b> </string>
    <string name="city"> <b>City : </b> </string>
    <string name="office_number"> <b>Office Number : </b> </string>
    <string name="district"> <b>District : </b> </string>
    <string name="state"> <b>State : </b> </string>
    <string name="pincode"> <b>Pincode : </b> </string>
    <string name="vehicle_type"> <b>Vehicle Type : </b> </string>
    <string name="battery_voltage"> <b>Battery Voltage : </b> </string>
    <string name="vts_quantity_pre"> <b>Vts Quantity : </b> </string>
    <string name="ignition"> <b>Ignition : </b> </string>
    <string name="accessory"> <b>Accessory : </b> </string>
    <string name="drs_quantity"> <b>Drs Quantity : </b> </string>
    <string name="fuel_sensor_quanti"> <b>Fuel Sensor Qty : </b> </string>
    <string name="door_sensor_quanti"> <b>Door Sensor Qty : </b> </string>
    <string name="high_count"> <b>High Count : </b> </string>
    <string name="normal_count"> <b>Normal Count : </b> </string>
    <string name="low_count"> <b>Low Count : </b> </string>
    <string name="priority_reason"> <b>Priority Reason : </b> </string>
    <string name="remarks"> <b>Remarks : </b> </string>
    <string name="select_client">Select Client</string>
    <string name="view_more"><font color='#F44336'>   View More...</font></string>

    <string-array name="spinnerItems">
        <item>Old</item>
        <item>VLTD</item>
    </string-array>

<!--    <string name="faqs_string"> There are many possibilities of device disconnection.-->
<!--        These are explained below.\n\n-->


<!--1. If a device is showing disconnected, check its connectivity with vehicle’s battery is fine or not, if not, please connect the power cable with vehicle battery.\n\n-->


<!--2. Sometimes device has GSM and GPS related issue, so, check its LED status properly.\n\n-->


<!--3. When the vehicle is at workshop for maintenance, device will show disconnect because all the connections removed by technician during maintenance of vehicle and device has no source of power to recharge its own battery.\n\n-->


<!--4. If a vehicle is in idle position from more than 24 hours, device will show disconnect because device is not getting any power supply to recharge its own battery.\n\n-->


<!--5. Sometimes device is faulty, and it will not show any recent data.\n\n-->


<!--6. If device is missing, damage or removed from vehicle, it will show as device disconnect.</string>-->
    <string name="details"><u>View Details</u></string>
    <string name="device_sr_no"><u>Device Sr.No.</u></string>
    <string name="other_material"><u>Other Material: </u></string>
    <string name="device_details"><u>Device Details: </u></string>
    <string name="dispatch"><u>Dispatch Details</u></string>
    <string name="dispatched_date">Dispatched Date</string>

    <string-array name="connection_status">
        <item>All</item>
        <item>Connected</item>
        <item>Dis Connected</item>

    </string-array>

    <string-array name="billStatus">
        <item>All</item>
        <item>Submitted</item>
        <item>Received</item>
        <item>Approved</item>
        <item>Rejected</item>
        <item>Cancelled</item>
    </string-array>

    <string-array name="material_status">
        <item>All</item>
        <item>Received</item>
        <item>Not Received</item>
    </string-array>

    <string-array name="return_status">
        <item>All</item>
        <item>Pending</item>
        <item>Received</item>
    </string-array>

    <string name="notification_channel_id">default</string>
    <string name="restart">Restart</string>
    <string name="cust_name">Cust_Name</string>
    <string name="location">Location :</string>
    <string name="faulty_vts">Faulty VTS :</string>
    <string name="faulty_fuel">"Faulty Fuel : "</string>
    <string name="faulty_drs_sos">Faulty DRS/SOS :</string>
    <string name="vts_add">VTS ADD</string>
    <string name="vts_add_30">VTS ADD 30</string>
    <string name="drs_add">DRS ADD</string>
    <string name="drs_add_30">DRS ADD 30</string>
    <string name="total_vts">Total VTS</string>
    <string name="total_drs">Total DRS</string>
    <string name="sos_temp">SOS Temp</string>
    <string name="lid_sensor">Lid Sensor</string>
    <string name="fuel_sensor">Fuel Sensor</string>
    <string name="temp_sensor">Temp Sensor</string>
    <string name="under_maintenance">Under Maintenance : </string>
    <string name="under_maint_but_working">Under Maint but working : </string>
    <string name="faulty_sos_temper">"Faulty SOS Temper : "</string>
    <string name="faulty_lid_sensor">"Faulty LID Sensor : "</string>
    <string name="faulty_fuel_sensor">"Faulty Fuel Sensor : "</string>
    <string name="faulty_temp_sensor">"Faulty Temp Sensor : "</string>
    <string name="working_device">Working Devices</string>
    <string name="faulty_device">Faulty Devices</string>
    <string name="total_devices">Total Devices -</string>
    <string name="vts_details">VTS Details</string>
    <string name="vts_devices">Device Demand</string>
    <string name="acc_details">Accessory Demand</string>
    <string name="add_more_accessories">Add More </string>
    <string name="add_more_devices">Add More </string>
    <string name="submit">Submit</string>
    <string name="working_drs">Working DRS</string>
    <string name="faulty_drs">Faulty DRS</string>
    <string name="installation_details">Installation Details</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="drs_details"><u>View DRS Status</u></string>
    <string name="close">CLOSE</string>
    <string name="you_can_add_your_remarks_here">You can add your remarks here</string>
    <string name="received_device">Received Device</string>
    <string name="content_unavailable">Content Unavailable!!</string>
    <string name="accept">Accept</string>
    <string name="get_vehicles_under_maint">Get Vehicles Under Maint</string>
    <string name="add_vehicle_um">Add Vehicle to Under Maint</string>

    <string-array name="vts_type">
        <item>SELECT VTS TYPE</item>
        <item>Standard VTS</item>
        <item>TM</item>
    </string-array>
    <string name="add_dashboard">ADD Dashboard</string>
    <string name="internet_connection_restored">Internet connection restored</string>
    <string name="it_seems_internet_connection_not_available">It seems internet connection not available</string>
    <string name="your_location_is_off">Your Location is OFF.</string>
    <string name="enable_location">Enable Location</string>
    <string name="activities">Activities</string>
    <string name="send_to_technician">Send to Technician</string>
    <string name="update_almost_finished">Update almost finished!</string>
    <string name="not_downloaded_yet">Not downloaded yet</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="incentive">Incentive</string>
    <string name="attendance_activity">Attendance Activity</string>
    <string name="incentive_activity">Incentive Activity</string>
    <string name="stock_activity">Stock Activity</string>
    <string name="live_status">Live Status</string>
    <string name="live_status_eon">Live Status Eon</string>
    <string name="call_sheet">Call Sheet</string>
    <string name="payment_collection_report">Payment Collection Report</string>
    <string name="bill_intimation">Bill Intimation</string>
    <string name="service_stock_demand">Service Stock Demand</string>
    <string name="add_remove_um">Add/Remove UM</string>
    <string name="send_to_eon">Send to Eon</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="mark">Mark</string>
    <string name="view_attendance">View Attendance</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="return_to_eon">Return To Eon</string>
    <string name="update">Update</string>
    <string name="add_um">Add UM</string>
    <string name="remove_um">Remove UM</string>
    <string name="new_version_available">New Version Available, Kindly Update App from Play store</string>
    <string name="update_button">UPDATE</string>
    <string name="try_again_connection_timeout">Try Again-Connection timeout</string>
    <string name="faulty_devices">Faulty Devices</string>
    <string name="you_have">You have </string>
    <string name="faulty_devices_please_send_to_office_immediately"> faulty devices, Please send to office immediately.</string>
    <string name="faulty_devices_dot"> faulty devices.</string>
    <string name="ok">OK</string>
    <string name="eon_ftapp">Eon FTApp</string>
    <string name="field_activity_logger">Field Activity Logger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="version">Version</string>
    <string name="change_password">Change Password</string>
    <string name="eon_infotech_limited">Eon Infotech Limited</string>
</resources>
