<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAddNextDayPlan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Date -->"
                android:textStyle="bold" />

            <in.eoninfotech.eontechnician.view.MyTextView
                android:id="@+id/datee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="18/11/2016" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/linear_back"
            android:orientation="vertical"
            android:padding="7dp">

            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/plnt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/spinnr_back">

                <in.eoninfotech.eontechnician.view.MySearchableSpinner
                    android:id="@+id/nxt_plant"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:spinnerMode="dialog" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/drop" />

            </RelativeLayout>

            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/vehcl" />

            <ListView
                android:id="@+id/vehicle_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <in.eoninfotech.eontechnician.view.MyTextView
                android:id="@+id/drs_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/drs" />

            <ListView
                android:id="@+id/drs_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <CheckBox

                android:id="@+id/nxt_spoken_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/eonBlue"
                android:text="Spoken to Client"
                android:textStyle="bold"
                android:textSize="20sp" />
            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="Client name" />

            <in.eoninfotech.eontechnician.view.MyEditText
                android:id="@+id/nxt_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="top|left"
                android:hint=""/>
            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="Client number" />

            <in.eoninfotech.eontechnician.view.MyEditText
                android:id="@+id/nxt_client_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:inputType="number"
                android:gravity="top|left"
                android:hint=""
                android:maxLength="10"/>

            <in.eoninfotech.eontechnician.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="Remarks" />

            <in.eoninfotech.eontechnician.view.MyEditText
                android:id="@+id/nxt_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="top|left"
                android:hint=""
                android:lines="4" />
        </LinearLayout>

        <Button
            android:id="@+id/nxt_update_data"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_update"
            android:gravity="center"
            android:text="UPDATE DATA"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>
